--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 # will have compiled files and executables
 debug/
 target/
+**/*.pdf
+**/*.docx
+**/.DS_Store
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
