--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
+edition = "2021"
+keywords = ["openai", "sdk", "RESTful", "async", "tokio"]
+license-file = "MIT"
 name = "openai-ng"
 version = "0.1.0"
-edition = "2021"
+categories = ["api-bindings"]
 
 [dependencies]
 anyhow = "1.0.86"
@@ -11,17 +14,17 @@ derive_builder = "0.20.0"
 dotenv = "0.15.0"
 futures = "0.3.30"
 http = "1.1.0"
-opencv = { version = "0.92.2", features=["clang-runtime"], optional = true }
-reqwest = { version = "0.12.5", features = ["stream", "multipart"] }
-serde = { version = "1.0.207", features = ["derive"] }
+opencv = {version = "0.92.2", features = ["clang-runtime"], optional = true}
+reqwest = {version = "0.12.5", features = ["stream", "multipart"]}
+serde = {version = "1.0.207", features = ["derive"]}
 serde_json = "1.0.124"
-serde_with = { version = "3.9.0", features = ["json"] }
+serde_with = {version = "3.9.0", features = ["json"]}
 smart-default = "0.7.1"
 thiserror = "1.0.63"
-tokio = { version = "1.39.2", features = ["full"] }
-tokio-util = { version = "0.7.11", features = ["full"] }
+tokio = {version = "1.39.2", features = ["full"]}
+tokio-util = {version = "0.7.11", features = ["full"]}
 tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["json"] }
+tracing-subscriber = {version = "0.3.18", features = ["json"]}
 url = "2.5.2"
 
 [features]
