--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 keywords = ["openai", "sdk", "RESTful", "async", "tokio"]
-license-file = "MIT"
+license = "MIT"
 name = "openai-ng"
 version = "0.1.0"
 categories = ["api-bindings"]
